# swift_training

./: .gitignore  README.md
CryptoWatch/: buildServer.json
CryptoWatch/CryptoWatch/: AppDelegate.swift  Info.plist  SceneDelegate.swift
CryptoWatch/CryptoWatch.xcodeproj/: project.pbxproj
CryptoWatch/CryptoWatch/Extensions/: Image.swift
CryptoWatch/CryptoWatch/Models/: MarketModel.swift
CryptoWatch/CryptoWatch/Network/: NetworkRepository.swift
CryptoWatch/CryptoWatch/Services/: CurrencyService.swift
CryptoWatch/CryptoWatchTests/: CryptoWatchTests.swift
employee_directory/employee_directory/: employee_directoryApp.swift
employee_directory/employee_directory.xcodeproj/: project.pbxproj
employee_directory/employee_directory/DTO/: UserDto.swift
employee_directory/employee_directory/Infrastructure/: NavigatorView.swift
employee_directory/employee_directory/Models/: UserModel.swift
employee_directory/employee_directory/Presentation/: DetailsScreen.swift  ListScreen.swift
gRPC-Chat-Sample/: README.md
gRPC-Chat-Sample/gRPC-Chat/: buildServer.json
gRPC-Chat-Sample/gRPC-Chat-Server/: Cargo.toml  build.rs
gRPC-Chat-Sample/gRPC-Chat-Server/src/: main.rs
gRPC-Chat-Sample/gRPC-Chat-Server/src/chat/: mod.rs
gRPC-Chat-Sample/gRPC-Chat-Server/src/login/: mod.rs
gRPC-Chat-Sample/gRPC-Chat-Shared/: chat.proto  login.proto
task_flow/: README.md  buildServer.json  task-flow-Info.plist
task_flow/task_flow/: ContentView.swift  task_flowApp.swift
task_flow/task_flow.xcodeproj/: project.pbxproj
task_flow/task_flowTests/: task_flowTests.swift
(+44 files in other folders)
